@@ -23,19 +23,19 @@ import java.io.OutputStream;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 
 import org.apache.catalina.util.IOTools;
+import org.apache.tomcat.util.http.Method;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 
 /**
- * Abstract base class for Ant tasks that interact with the <em>Manager</em> web
- * application for dynamically deploying and undeploying applications. These
- * tasks require Ant 1.4 or later.
+ * Abstract base class for Ant tasks that interact with the <em>Manager</em> web application for dynamically deploying
+ * and undeploying applications. These tasks require Ant 1.4 or later.
  *
- * @author Craig R. McClanahan
  * @since 4.1
  */
 public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
@@ -106,16 +106,14 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
     }
 
     /**
-     * If set to true - ignore the constraint of the first line of the response
-     * message that must be "OK -".
+     * If set to true - ignore the constraint of the first line of the response message that must be "OK -".
      * <p>
-     * When this attribute is set to {@code false} (the default), the first line
-     * of server response is expected to start with "OK -". If it does not then
-     * the task is considered as failed and the first line is treated as an
-     * error message.
+     * When this attribute is set to {@code false} (the default), the first line of server response is expected to start
+     * with "OK -". If it does not then the task is considered as failed and the first line is treated as an error
+     * message.
      * <p>
-     * When this attribute is set to {@code true}, the first line of the
-     * response is treated like any other, regardless of its text.
+     * When this attribute is set to {@code true}, the first line of the response is treated like any other, regardless
+     * of its text.
      */
     protected boolean ignoreResponseConstraint = false;
 
@@ -131,9 +129,8 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
     // --------------------------------------------------------- Public Methods
 
     /**
-     * Execute the specified command. This logic only performs the common
-     * attribute validation required by all subclasses; it does not perform any
-     * functional logic directly.
+     * Execute the specified command. This logic only performs the common attribute validation required by all
+     * subclasses; it does not perform any functional logic directly.
      *
      * @exception BuildException if a validation error occurs
      */
@@ -158,28 +155,27 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
 
 
     /**
-     * Execute the specified command, based on the configured properties. The
-     * input stream will be closed upon completion of this task, whether it was
-     * executed successfully or not.
+     * Execute the specified command, based on the configured properties. The input stream will be closed upon
+     * completion of this task, whether it was executed successfully or not.
      *
-     * @param command Command to be executed
-     * @param istream InputStream to include in an HTTP PUT, if any
-     * @param contentType Content type to specify for the input, if any
+     * @param command       Command to be executed
+     * @param istream       InputStream to include in an HTTP PUT, if any
+     * @param contentType   Content type to specify for the input, if any
      * @param contentLength Content length to specify for the input, if any
      *
      * @exception BuildException if an error occurs
      */
     public void execute(String command, InputStream istream, String contentType, long contentLength)
-                    throws BuildException {
+            throws BuildException {
 
-        URLConnection conn = null;
         InputStreamReader reader = null;
         try {
             // Set up authorization with our credentials
             Authenticator.setDefault(new TaskAuthenticator(username, password));
 
             // Create a connection for this command
-            conn = (new URL(url + command)).openConnection();
+            URI uri = new URI(url + command);
+            URLConnection conn = uri.parseServerAuthority().toURL().openConnection();
             HttpURLConnection hconn = (HttpURLConnection) conn;
 
             // Set up standard connection characteristics
@@ -190,7 +186,7 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 preAuthenticate();
 
                 hconn.setDoOutput(true);
-                hconn.setRequestMethod("PUT");
+                hconn.setRequestMethod(Method.PUT);
                 if (contentType != null) {
                     hconn.setRequestProperty("Content-Type", contentType);
                 }
@@ -201,7 +197,7 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 }
             } else {
                 hconn.setDoOutput(false);
-                hconn.setRequestMethod("GET");
+                hconn.setRequestMethod(Method.GET);
             }
             hconn.setRequestProperty("User-Agent", "Catalina-Ant-Task/1.0");
 
@@ -210,13 +206,8 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
 
             // Send the request data (if any)
             if (istream != null) {
-                try (OutputStream ostream = hconn.getOutputStream()) {
+                try (istream; OutputStream ostream = hconn.getOutputStream()) {
                     IOTools.flow(istream, ostream);
-                } finally {
-                    try {
-                        istream.close();
-                    } catch (Exception e) {
-                    }
                 }
             }
 
@@ -230,11 +221,11 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 int ch = reader.read();
                 if (ch < 0) {
                     break;
-                } else if ((ch == '\r') || (ch == '\n')) {
+                } else if (ch == '\r' || ch == '\n') {
                     // in Win \r\n would cause handleOutput() to be called
                     // twice, the second time with an empty string,
                     // producing blank lines
-                    if (buff.length() > 0) {
+                    if (!buff.isEmpty()) {
                         String line = buff.toString();
                         buff.setLength(0);
                         if (!ignoreResponseConstraint && first) {
@@ -250,7 +241,7 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                     buff.append((char) ch);
                 }
             }
-            if (buff.length() > 0) {
+            if (!buff.isEmpty()) {
                 handleOutput(buff.toString(), msgPriority);
             }
             if (error != null && isFailOnError()) {
@@ -272,7 +263,6 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
                 } catch (IOException ioe) {
                     // Ignore
                 }
-                reader = null;
             }
             if (istream != null) {
                 try {
@@ -286,25 +276,19 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
 
 
     /*
-     * This is a hack.
-     * We need to use streaming to avoid OOME on large uploads.
-     * We'd like to use Authenticator.setDefault() for authentication as the JRE
-     * then provides the DIGEST client implementation.
-     * However, the above two are not compatible. When the request is made, the
-     * resulting 401 triggers an exception because, when using streams, the
-     * InputStream is no longer available to send with the repeated request that
-     * now includes the appropriate Authorization header.
-     * The hack is to make a simple OPTIONS request- i.e. without a request
-     * body.
-     * This triggers authentication and the requirement to authenticate for this
-     * host is cached and used to provide an appropriate Authorization when the
-     * next request is made (that includes a request body).
+     * This is a hack. We need to use streaming to avoid OOME on large uploads. We'd like to use
+     * Authenticator.setDefault() for authentication as the JRE then provides the DIGEST client implementation. However,
+     * the above two are not compatible. When the request is made, the resulting 401 triggers an exception because, when
+     * using streams, the InputStream is no longer available to send with the repeated request that now includes the
+     * appropriate Authorization header. The hack is to make a simple OPTIONS request- i.e. without a request body. This
+     * triggers authentication and the requirement to authenticate for this host is cached and used to provide an
+     * appropriate Authorization when the next request is made (that includes a request body).
      */
-    private void preAuthenticate() throws IOException {
-        URLConnection conn = null;
+    private void preAuthenticate() throws IOException, URISyntaxException {
 
         // Create a connection for this command
-        conn = (new URL(url)).openConnection();
+        URI uri = new URI(url);
+        URLConnection conn = uri.parseServerAuthority().toURL().openConnection();
         HttpURLConnection hconn = (HttpURLConnection) conn;
 
         // Set up standard connection characteristics
@@ -312,14 +296,16 @@ public abstract class AbstractCatalinaTask extends BaseRedirectorHelperTask {
         hconn.setDoInput(true);
         hconn.setUseCaches(false);
         hconn.setDoOutput(false);
-        hconn.setRequestMethod("OPTIONS");
+        hconn.setRequestMethod(Method.OPTIONS);
         hconn.setRequestProperty("User-Agent", "Catalina-Ant-Task/1.0");
 
         // Establish the connection with the server
         hconn.connect();
 
         // Swallow response message
-        IOTools.flow(hconn.getInputStream(), null);
+        try (InputStream is = hconn.getInputStream()) {
+            IOTools.flow(is, null);
+        }
     }
 
 
