@@ -17,6 +17,7 @@
 package org.apache.catalina.tribes.transport;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.catalina.tribes.Member;
@@ -27,14 +28,14 @@ import org.apache.juli.logging.LogFactory;
 public abstract class PooledSender extends AbstractSender implements MultiPointSender {
 
     private static final Log log = LogFactory.getLog(PooledSender.class);
-    protected static final StringManager sm =
-        StringManager.getManager(Constants.Package);
+    protected static final StringManager sm = StringManager.getManager(Constants.Package);
 
     private final SenderQueue queue;
     private int poolSize = 25;
     private long maxWait = 3000;
+
     public PooledSender() {
-        queue = new SenderQueue(this,poolSize);
+        queue = new SenderQueue(this, poolSize);
     }
 
     public abstract DataSender getNewDataSender();
@@ -50,7 +51,7 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public synchronized void connect() throws IOException {
-        //do nothing, happens in the socket sender itself
+        // do nothing, happens in the socket sender itself
         queue.open();
         setConnected(true);
     }
@@ -90,8 +91,8 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public boolean keepalive() {
-        //do nothing, the pool checks on every return
-        return (queue==null)?false:queue.checkIdleKeepAlive();
+        // do nothing, the pool checks on every return
+        return queue != null && queue.checkIdleKeepAlive();
     }
 
     @Override
@@ -101,29 +102,29 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public void remove(Member member) {
-        //no op for now, should not cancel out any keys
-        //can create serious sync issues
-        //all TCP connections are cleared out through keepalive
-        //and if remote node disappears
+        // no op for now, should not cancel out any keys
+        // can create serious sync issues
+        // all TCP connections are cleared out through keepalive
+        // and if remote node disappears
     }
-    //  ----------------------------------------------------- Inner Class
+    // ----------------------------------------------------- Inner Class
 
     private static class SenderQueue {
-        private int limit = 25;
+        private int limit;
 
-        PooledSender parent = null;
+        PooledSender parent;
 
-        private List<DataSender> notinuse = null;
+        private final List<DataSender> notinuse;
 
-        private List<DataSender> inuse = null;
+        private final List<DataSender> inuse;
 
         private boolean isOpen = true;
 
-        public SenderQueue(PooledSender parent, int limit) {
+        SenderQueue(PooledSender parent, int limit) {
             this.limit = limit;
             this.parent = parent;
-            notinuse = new java.util.LinkedList<>();
-            inuse = new java.util.LinkedList<>();
+            notinuse = new ArrayList<>();
+            inuse = new ArrayList<>();
         }
 
         /**
@@ -132,6 +133,7 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
         public int getLimit() {
             return limit;
         }
+
         /**
          * @param limit The limit to set.
          */
@@ -139,66 +141,71 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             this.limit = limit;
         }
 
-        public int getInUsePoolSize() {
+        public synchronized int getInUsePoolSize() {
             return inuse.size();
         }
 
-        public int getInPoolSize() {
+        public synchronized int getInPoolSize() {
             return notinuse.size();
         }
 
         public synchronized boolean checkIdleKeepAlive() {
-            DataSender[] list = new DataSender[notinuse.size()];
-            notinuse.toArray(list);
+            DataSender[] list = notinuse.toArray(new DataSender[0]);
             boolean result = false;
-            for (int i=0; i<list.length; i++) {
-                result = result | list[i].keepalive();
+            for (DataSender dataSender : list) {
+                result = result | dataSender.keepalive();
             }
             return result;
         }
 
         public synchronized DataSender getSender(long timeout) {
             long start = System.currentTimeMillis();
-            while ( true ) {
-                if (!isOpen)throw new IllegalStateException(sm.getString("pooledSender.closed.queue"));
+            while (true) {
+                if (!isOpen) {
+                    throw new IllegalStateException(sm.getString("pooledSender.closed.queue"));
+                }
                 DataSender sender = null;
-                if (notinuse.size() == 0 && inuse.size() < limit) {
+                if (notinuse.isEmpty() && inuse.size() < limit) {
                     sender = parent.getNewDataSender();
-                } else if (notinuse.size() > 0) {
-                    sender = notinuse.remove(0);
+                } else if (!notinuse.isEmpty()) {
+                    sender = notinuse.removeFirst();
                 }
                 if (sender != null) {
                     inuse.add(sender);
                     return sender;
-                }//end if
+                }
                 long delta = System.currentTimeMillis() - start;
-                if ( delta > timeout && timeout>0) return null;
-                else {
+                if (delta > timeout && timeout > 0) {
+                    return null;
+                } else {
                     try {
-                        wait(Math.max(timeout - delta,1));
-                    }catch (InterruptedException x){}
-                }//end if
+                        wait(Math.max(timeout - delta, 1));
+                    } catch (InterruptedException x) {
+                        // Ignore
+                    }
+                }
             }
         }
 
         public synchronized void returnSender(DataSender sender) {
-            if ( !isOpen) {
+            if (!isOpen) {
                 sender.disconnect();
                 return;
             }
-            //to do
+            // to do
             inuse.remove(sender);
-            //just in case the limit has changed
-            if ( notinuse.size() < this.getLimit() ) notinuse.add(sender);
-            else
+            // just in case the limit has changed
+            if (notinuse.size() < this.getLimit()) {
+                notinuse.add(sender);
+            } else {
                 try {
                     sender.disconnect();
                 } catch (Exception e) {
                     if (log.isDebugEnabled()) {
-                        log.debug(sm.getString(
-                                "PooledSender.senderDisconnectFail"), e);
+                        log.debug(sm.getString("PooledSender.senderDisconnectFail"), e);
                     }
                 }
+            }
             notifyAll();
         }
 
@@ -206,14 +213,14 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             isOpen = false;
             Object[] unused = notinuse.toArray();
             Object[] used = inuse.toArray();
-            for (int i = 0; i < unused.length; i++) {
-                DataSender sender = (DataSender) unused[i];
+            for (Object value : unused) {
+                DataSender sender = (DataSender) value;
                 sender.disconnect();
-            }//for
-            for (int i = 0; i < used.length; i++) {
-                DataSender sender = (DataSender) used[i];
+            }
+            for (Object o : used) {
+                DataSender sender = (DataSender) o;
                 sender.disconnect();
-            }//for
+            }
             notinuse.clear();
             inuse.clear();
             notifyAll();
