@@ -21,12 +21,18 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLStreamHandler;
+import java.nio.charset.Charset;
 import java.security.Permission;
 import java.security.cert.Certificate;
-import java.util.jar.JarEntry;
+import java.text.Collator;
+import java.util.Arrays;
+import java.util.Locale;
+import java.util.Objects;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
@@ -34,12 +40,13 @@ import org.apache.catalina.WebResource;
 import org.apache.catalina.WebResourceRoot;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
+import org.apache.tomcat.util.buf.HexUtils;
 import org.apache.tomcat.util.res.StringManager;
+import org.apache.tomcat.util.security.ConcurrentMessageDigest;
 
 /**
- * This class is designed to wrap a 'raw' WebResource and providing caching for
- * expensive operations. Inexpensive operations may be passed through to the
- * underlying resource.
+ * This class is designed to wrap a 'raw' WebResource and providing caching for expensive operations. Inexpensive
+ * operations may be passed through to the underlying resource.
  */
 public class CachedResource implements WebResource {
 
@@ -69,14 +76,16 @@ public class CachedResource implements WebResource {
     private volatile Boolean cachedExists = null;
     private volatile Boolean cachedIsVirtual = null;
     private volatile Long cachedContentLength = null;
+    private volatile String cachedStrongETag = null;
 
 
-    public CachedResource(Cache cache, StandardRoot root, String path, long ttl,
-            int objectMaxSizeBytes, boolean usesClassLoaderResources) {
+    public CachedResource(Cache cache, StandardRoot root, String path, long ttl, int objectMaxSizeBytes,
+            boolean usesClassLoaderResources) {
         this.cache = cache;
         this.root = root;
         this.webAppPath = path;
         this.ttl = ttl;
+        nextCheck = ttl + System.currentTimeMillis();
         this.objectMaxSizeBytes = objectMaxSizeBytes;
         this.usesClassLoaderResources = usesClassLoaderResources;
     }
@@ -93,16 +102,12 @@ public class CachedResource implements WebResource {
             return false;
         }
 
-        long now = System.currentTimeMillis();
-
         if (webResource == null) {
             synchronized (this) {
                 if (webResource == null) {
-                    webResource = root.getResourceInternal(
-                            webAppPath, useClassLoaderResources);
+                    webResource = root.getResourceInternal(webAppPath, useClassLoaderResources);
                     getLastModified();
                     getContentLength();
-                    nextCheck = ttl + now;
                     // exists() is a relatively expensive check for a file so
                     // use the fact that we know if it exists at this point
                     if (webResource instanceof EmptyResource) {
@@ -115,14 +120,15 @@ public class CachedResource implements WebResource {
             }
         }
 
+        long now = System.currentTimeMillis();
+
         if (now < nextCheck) {
             return true;
         }
 
         // Assume resources inside WARs will not change
         if (!root.isPackedWarFile()) {
-            WebResource webResourceInternal = root.getResourceInternal(
-                    webAppPath, useClassLoaderResources);
+            WebResource webResourceInternal = root.getResourceInternal(webAppPath, useClassLoaderResources);
             if (!webResource.exists() && webResourceInternal.exists()) {
                 return false;
             }
@@ -151,8 +157,7 @@ public class CachedResource implements WebResource {
         if (webResources == null) {
             synchronized (this) {
                 if (webResources == null) {
-                    webResources = root.getResourcesInternal(
-                            webAppPath, useClassLoaderResources);
+                    webResources = root.getResourcesInternal(webAppPath, useClassLoaderResources);
                     nextCheck = ttl + now;
                     return true;
                 }
@@ -180,61 +185,48 @@ public class CachedResource implements WebResource {
 
     @Override
     public long getLastModified() {
-        Long cachedLastModified = this.cachedLastModified;
         if (cachedLastModified == null) {
-            cachedLastModified =
-                    Long.valueOf(webResource.getLastModified());
-            this.cachedLastModified = cachedLastModified;
+            cachedLastModified = Long.valueOf(webResource.getLastModified());
         }
         return cachedLastModified.longValue();
     }
 
     @Override
     public String getLastModifiedHttp() {
-        String cachedLastModifiedHttp = this.cachedLastModifiedHttp;
         if (cachedLastModifiedHttp == null) {
             cachedLastModifiedHttp = webResource.getLastModifiedHttp();
-            this.cachedLastModifiedHttp = cachedLastModifiedHttp;
         }
         return cachedLastModifiedHttp;
     }
 
     @Override
     public boolean exists() {
-        Boolean cachedExists = this.cachedExists;
         if (cachedExists == null) {
             cachedExists = Boolean.valueOf(webResource.exists());
-            this.cachedExists = cachedExists;
         }
         return cachedExists.booleanValue();
     }
 
     @Override
     public boolean isVirtual() {
-        Boolean cachedIsVirtual = this.cachedIsVirtual;
         if (cachedIsVirtual == null) {
             cachedIsVirtual = Boolean.valueOf(webResource.isVirtual());
-            this.cachedIsVirtual = cachedIsVirtual;
         }
         return cachedIsVirtual.booleanValue();
     }
 
     @Override
     public boolean isDirectory() {
-        Boolean cachedIsDirectory = this.cachedIsDirectory;
         if (cachedIsDirectory == null) {
             cachedIsDirectory = Boolean.valueOf(webResource.isDirectory());
-            this.cachedIsDirectory = cachedIsDirectory;
         }
         return cachedIsDirectory.booleanValue();
     }
 
     @Override
     public boolean isFile() {
-        Boolean cachedIsFile = this.cachedIsFile;
         if (cachedIsFile == null) {
             cachedIsFile = Boolean.valueOf(webResource.isFile());
-            this.cachedIsFile = cachedIsFile;
         }
         return cachedIsFile.booleanValue();
     }
@@ -255,15 +247,26 @@ public class CachedResource implements WebResource {
 
     @Override
     public long getContentLength() {
-        Long cachedContentLength = this.cachedContentLength;
+        /*
+         * Cache the content length for two reasons.
+         *
+         * 1. It is relatively expensive to calculate, it shouldn't change and this method is called multiple times
+         * during cache validation. Caching, therefore, offers a performance benefit.
+         *
+         * 2. There is a race condition if concurrent threads are trying to PUT and DELETE the same resource. See BZ
+         * 69527 (https://bz.apache.org/bugzilla/show_bug.cgi?id=69527#c14) for full details. The short version is that
+         * getContentLength() must always return the same value for any one CachedResource instance else the cache size
+         * will be corrupted.
+         */
         if (cachedContentLength == null) {
-            long result = 0;
-            if (webResource != null) {
-                result = webResource.getContentLength();
-                cachedContentLength = Long.valueOf(result);
-                this.cachedContentLength = cachedContentLength;
+            if (webResource == null) {
+                synchronized (this) {
+                    if (webResource == null) {
+                        webResource = root.getResourceInternal(webAppPath, usesClassLoaderResources);
+                    }
+                }
             }
-            return result;
+            cachedContentLength = Long.valueOf(webResource.getContentLength());
         }
         return cachedContentLength.longValue();
     }
@@ -289,6 +292,20 @@ public class CachedResource implements WebResource {
     }
 
     @Override
+    public String getStrongETag() {
+        if (cachedStrongETag == null) {
+            byte[] buf = getContent();
+            if (buf != null) {
+                buf = ConcurrentMessageDigest.digestSHA256(buf);
+                cachedStrongETag = "\"" + HexUtils.toHexString(buf) + "\"";
+            } else {
+                cachedStrongETag = webResource.getStrongETag();
+            }
+        }
+        return cachedStrongETag;
+    }
+
+    @Override
     public void setMimeType(String mimeType) {
         webResource.setMimeType(mimeType);
     }
@@ -310,13 +327,11 @@ public class CachedResource implements WebResource {
 
     @Override
     public byte[] getContent() {
-        byte[] cachedContent = this.cachedContent;
         if (cachedContent == null) {
             if (getContentLength() > objectMaxSizeBytes) {
                 return null;
             }
             cachedContent = webResource.getContent();
-            this.cachedContent = cachedContent;
         }
         return cachedContent;
     }
@@ -329,32 +344,26 @@ public class CachedResource implements WebResource {
     @Override
     public URL getURL() {
         /*
-         * We don't want applications using this URL to access the resource
-         * directly as that could lead to inconsistent results when the resource
-         * is updated on the file system but the cache entry has not yet
-         * expired. We saw this, for example, in JSP compilation.
-         * - last modified time was obtained via
-         *   ServletContext.getResource("path").openConnection().getLastModified()
-         * - JSP content was obtained via
-         *   ServletContext.getResourceAsStream("path")
-         * The result was that the JSP modification was detected but the JSP
-         * content was read from the cache so the non-updated JSP page was
-         * used to generate the .java and .class file
+         * We don't want applications using this URL to access the resource directly as that could lead to inconsistent
+         * results when the resource is updated on the file system but the cache entry has not yet expired. We saw this,
+         * for example, in JSP compilation.
          *
-         * One option to resolve this issue is to use a custom URL scheme for
-         * resource URLs. This would allow us, via registration of a
-         * URLStreamHandlerFactory, to control how the resources are accessed
-         * and ensure that all access go via the cache We took this approach for
-         * war: URLs so we can use jar:war:file: URLs to reference resources in
-         * unpacked WAR files. However, because URL.setURLStreamHandlerFactory()
-         * may only be caused once, this can cause problems when using other
-         * libraries that also want to use a custom URL scheme.
+         * - last modified time was obtained via ServletContext.getResource("path").openConnection().getLastModified()
          *
-         * The approach below allows us to insert a custom URLStreamHandler
-         * without registering a custom protocol. The only limitation (compared
-         * to registering a custom protocol) is that if the application
-         * constructs the same URL from a String, they will access the resource
-         * directly and not via the cache.
+         * - JSP content was obtained via ServletContext.getResourceAsStream("path")
+         *
+         * The result was that the JSP modification was detected but the JSP content was read from the cache so the
+         * non-updated JSP page was used to generate the .java and .class file
+         *
+         * One option to resolve this issue is to use a custom URL scheme for resource URLs. This would allow us, via
+         * registration of a URLStreamHandlerFactory, to control how the resources are accessed and ensure that all
+         * access go via the cache. We took this approach for war: URLs so we can use jar:war:file: URLs to reference
+         * resources in unpacked WAR files. However, because URL.setURLStreamHandlerFactory() may only be called once,
+         * this can cause problems when using other libraries that also want to use a custom URL scheme.
+         *
+         * The approach below allows us to insert a custom URLStreamHandler without registering a custom protocol. The
+         * only limitation (compared to registering a custom protocol) is that if the application constructs the same
+         * URL from a String, they will access the resource directly and not via the cache.
          */
         URL resourceURL = webResource.getURL();
         if (resourceURL == null) {
@@ -363,8 +372,9 @@ public class CachedResource implements WebResource {
         try {
             CachedResourceURLStreamHandler handler =
                     new CachedResourceURLStreamHandler(resourceURL, root, webAppPath, usesClassLoaderResources);
+            @SuppressWarnings("deprecation")
             URL result = new URL(null, resourceURL.toExternalForm(), handler);
-            handler.setAssociatedURL(result);
+            handler.setCacheURL(result);
             return result;
         } catch (MalformedURLException e) {
             log.error(sm.getString("cachedResource.invalidURL", resourceURL.toExternalForm()), e);
@@ -400,11 +410,20 @@ public class CachedResource implements WebResource {
         return webResources;
     }
 
+    boolean usesClassLoaderResources() {
+        return usesClassLoaderResources;
+    }
+
+
     // Assume that the cache entry will always include the content unless the
     // resource content is larger than objectMaxSizeBytes. This isn't always the
     // case but it makes tracking the current cache size easier.
     long getSize() {
         long result = CACHE_ENTRY_SIZE;
+        // Longer paths use a noticeable amount of memory so account for this in
+        // the cache size. The fixed component of a String instance's memory
+        // usage is accounted for in the 500 bytes above.
+        result += getWebappPath().length() * 2L;
         if (getContentLength() <= objectMaxSizeBytes) {
             result += getContentLength();
         }
@@ -412,6 +431,30 @@ public class CachedResource implements WebResource {
     }
 
 
+    /*
+     * Mimics the behaviour of FileURLConnection.getInputStream for a directory. Deliberately uses default locale.
+     */
+    private static InputStream buildInputStream(String[] files) {
+        Arrays.sort(files, Collator.getInstance(Locale.getDefault()));
+        StringBuilder result = new StringBuilder();
+        for (String file : files) {
+            result.append(file);
+            // Every entry is followed by \n including the last
+            result.append('\n');
+        }
+        return new ByteArrayInputStream(result.toString().getBytes(Charset.defaultCharset()));
+    }
+
+
+    /**
+     * URLStreamHandler to handle a URL for a cached resource, delegating reads to the Cache.
+     * <ul>
+     * <li>delegates reads to the Cache, to ensure consistent invalidation behavior</li>
+     * <li>delegates hashCode()/ equals() behavior to the underlying Resource URL. (Equinox/ OSGi compatibility)</li>
+     * <li>detects the case where a new relative URL is created from the wrapped URL, inheriting its handler; in this
+     * case reverts to default behavior</li>
+     * </ul>
+     */
     private static class CachedResourceURLStreamHandler extends URLStreamHandler {
 
         private final URL resourceURL;
@@ -419,9 +462,9 @@ public class CachedResource implements WebResource {
         private final String webAppPath;
         private final boolean usesClassLoaderResources;
 
-        private URL associatedURL = null;
+        private URL cacheURL = null;
 
-        public CachedResourceURLStreamHandler(URL resourceURL, StandardRoot root, String webAppPath,
+        CachedResourceURLStreamHandler(URL resourceURL, StandardRoot root, String webAppPath,
                 boolean usesClassLoaderResources) {
             this.resourceURL = resourceURL;
             this.root = root;
@@ -429,8 +472,8 @@ public class CachedResource implements WebResource {
             this.usesClassLoaderResources = usesClassLoaderResources;
         }
 
-        protected void setAssociatedURL(URL associatedURL) {
-            this.associatedURL = associatedURL;
+        protected void setCacheURL(URL cacheURL) {
+            this.cacheURL = cacheURL;
         }
 
         @Override
@@ -438,18 +481,61 @@ public class CachedResource implements WebResource {
             // This deliberately uses ==. If u isn't the URL object this
             // URLStreamHandler was constructed for we do not want to use this
             // URLStreamHandler to create a connection.
-            if (associatedURL != null && u == associatedURL) {
-                if ("jar".equals(associatedURL.getProtocol())) {
+            if (cacheURL != null && u == cacheURL) {
+                if ("jar".equals(cacheURL.getProtocol())) {
                     return new CachedResourceJarURLConnection(resourceURL, root, webAppPath, usesClassLoaderResources);
                 } else {
                     return new CachedResourceURLConnection(resourceURL, root, webAppPath, usesClassLoaderResources);
                 }
             } else {
-                // The stream handler has been inherited by a URL that was
-                // constructed from a cache URL. We need to break that link.
-                URL constructedURL = new URL(u.toExternalForm());
+                // This stream handler has been inherited by a URL that was constructed from a cache URL.
+                // We need to break that link.
+                URI constructedURI;
+                try {
+                    constructedURI = new URI(u.toExternalForm());
+                } catch (URISyntaxException e) {
+                    // Not ideal but consistent with API
+                    throw new IOException(e);
+                }
+                URL constructedURL = constructedURI.toURL();
                 return constructedURL.openConnection();
             }
+        }
+
+        /**
+         * {@inheritDoc}
+         * <p>
+         * We don't know what the requirements are for equals for the wrapped resourceURL so if u1 is the cacheURL,
+         * delegate to the resourceURL and it's handler. Otherwise, use the default implementation from
+         * URLStreamHandler.
+         */
+        @Override
+        protected boolean equals(URL u1, URL u2) {
+            // Deliberate use of ==
+            if (cacheURL == u1) {
+                return resourceURL.equals(u2);
+            }
+            // Not the cacheURL. This stream handler has been inherited by a URL that was constructed from a cache URL.
+            // Use the default implementation from URLStreamHandler.
+            return super.equals(u1, u2);
+        }
+
+        /**
+         * {@inheritDoc}
+         * <p>
+         * We don't know what the requirements are for hashcode for the wrapped resourceURL so if u1 is the cacheURL,
+         * delegate to the resourceURL and it's handler. Otherwise, use the default implementation from
+         * URLStreamHandler.
+         */
+        @Override
+        protected int hashCode(URL u) {
+            // Deliberate use of ==
+            if (cacheURL == u) {
+                return resourceURL.hashCode();
+            }
+            // Not the cacheURL. This stream handler has been inherited by a URL that was constructed from a cache URL.
+            // Use the default implementation from URLStreamHandler.
+            return super.hashCode(u);
         }
     }
 
@@ -480,10 +566,16 @@ public class CachedResource implements WebResource {
 
         @Override
         public InputStream getInputStream() throws IOException {
-            return getResource().getInputStream();
+            WebResource resource = getResource();
+            if (resource.isDirectory()) {
+                return buildInputStream(resource.getWebResourceRoot().list(webAppPath));
+            } else {
+                return getResource().getInputStream();
+            }
         }
 
         @Override
+        @Deprecated
         public Permission getPermission() throws IOException {
             // Doesn't trigger a call to connect for file:// URLs
             return resourceURL.openConnection().getPermission();
@@ -501,6 +593,12 @@ public class CachedResource implements WebResource {
 
         private WebResource getResource() {
             return root.getResource(webAppPath, false, usesClassLoaderResources);
+        }
+
+        @Override
+        public String getContentType() {
+            // "content/unknown" is the value used by sun.net.www.URLConnection. It is used here for consistency.
+            return Objects.requireNonNullElse(getResource().getMimeType(), "content/unknown");
         }
     }
 
@@ -531,10 +629,16 @@ public class CachedResource implements WebResource {
 
         @Override
         public InputStream getInputStream() throws IOException {
-            return getResource().getInputStream();
+            WebResource resource = getResource();
+            if (resource.isDirectory()) {
+                return buildInputStream(resource.getWebResourceRoot().list(webAppPath));
+            } else {
+                return getResource().getInputStream();
+            }
         }
 
         @Override
+        @Deprecated
         public Permission getPermission() throws IOException {
             // Doesn't trigger a call to connect for jar:// URLs
             return resourceURL.openConnection().getPermission();
@@ -559,13 +663,5 @@ public class CachedResource implements WebResource {
             return ((JarURLConnection) resourceURL.openConnection()).getJarFile();
         }
 
-        @Override
-        public JarEntry getJarEntry() throws IOException {
-            if (getEntryName() == null) {
-                return null;
-            } else {
-                return super.getJarEntry();
-            }
-        }
     }
 }
