@@ -19,11 +19,11 @@ package org.apache.catalina.webresources;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -51,14 +51,13 @@ import org.apache.tomcat.util.res.StringManager;
 
 /**
  * <p>
- * Provides the resources implementation for a web application. The
- * {@link org.apache.catalina.Lifecycle} of this class should be aligned with
- * that of the associated {@link Context}.
- * </p><p>
- * This implementation assumes that the base attribute supplied to {@link
- * StandardRoot#createWebResourceSet(
- * org.apache.catalina.WebResourceRoot.ResourceSetType, String, String, String,
- * String)} represents the absolute path to a file.
+ * Provides the resources implementation for a web application. The {@link org.apache.catalina.Lifecycle} of this class
+ * should be aligned with that of the associated {@link Context}.
+ * </p>
+ * <p>
+ * This implementation assumes that the base attribute supplied to
+ * {@link StandardRoot#createWebResourceSet( org.apache.catalina.WebResourceRoot.ResourceSetType, String, String, String, String)}
+ * represents the absolute path to a file.
  * </p>
  */
 public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot {
@@ -68,6 +67,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
     private Context context;
     private boolean allowLinking = false;
+    private boolean readOnly = false;
     private final List<WebResourceSet> preResources = new ArrayList<>();
     private WebResourceSet main;
     private final List<WebResourceSet> classResources = new ArrayList<>();
@@ -79,13 +79,13 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     private ObjectName cacheJmxName = null;
 
     private boolean trackLockedFiles = false;
-    private final Set<TrackedWebResource> trackedResources =
-            Collections.newSetFromMap(new ConcurrentHashMap<TrackedWebResource,Boolean>());
+    private final Set<TrackedWebResource> trackedResources = ConcurrentHashMap.newKeySet();
+
+    private ArchiveIndexStrategy archiveIndexStrategy = ArchiveIndexStrategy.BLOOM;
 
     // Constructs to make iteration over all WebResourceSets simpler
     private final List<WebResourceSet> mainResources = new ArrayList<>();
-    private final List<List<WebResourceSet>> allResources =
-            new ArrayList<>();
+    private final List<List<WebResourceSet>> allResources = new ArrayList<>();
     {
         allResources.add(preResources);
         allResources.add(mainResources);
@@ -96,10 +96,8 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
 
     /**
-     * Creates a new standard implementation of {@link WebResourceRoot}. A no
-     * argument constructor is required for this to work with the digester.
-     * {@link #setContext(Context)} must be called before this component is
-     * initialized.
+     * Creates a new standard implementation of {@link WebResourceRoot}. A no argument constructor is required for this
+     * to work with the digester. {@link #setContext(Context)} must be called before this component is initialized.
      */
     public StandardRoot() {
         // NO-OP
@@ -121,20 +119,18 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
         // Set because we don't want duplicates
         // LinkedHashSet to retain the order. It is the order of the
-        // WebResourceSet that matters but it is simpler to retain the order
+        // WebResourceSet that matters, but it is simpler to retain the order
         // over all of the JARs.
         HashSet<String> result = new LinkedHashSet<>();
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
                 if (!webResourceSet.getClassLoaderOnly()) {
                     String[] entries = webResourceSet.list(path);
-                    for (String entry : entries) {
-                        result.add(entry);
-                    }
+                    result.addAll(Arrays.asList(entries));
                 }
             }
         }
-        return result.toArray(new String[result.size()]);
+        return result.toArray(new String[0]);
     }
 
 
@@ -151,7 +147,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 }
             }
         }
-        if (result.size() == 0) {
+        if (result.isEmpty()) {
             return null;
         }
         return result;
@@ -207,8 +203,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return getResource(path, true, false);
     }
 
-    protected WebResource getResource(String path, boolean validate,
-            boolean useClassLoaderResources) {
+    protected WebResource getResource(String path, boolean validate, boolean useClassLoaderResources) {
         if (validate) {
             path = validate(path);
         }
@@ -234,22 +229,20 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
 
     /**
-     * Ensures that this object is in a valid state to serve resources, checks
-     * that the path is a String that starts with '/' and checks that the path
-     * can be normalized without stepping outside of the root.
+     * Ensures that this object is in a valid state to serve resources, checks that the path is a String that starts
+     * with '/' and checks that the path can be normalized without stepping outside of the root.
      *
-     * @param path
-     * @return  the normalized path
+     * @param path The path to validate
+     *
+     * @return the normalized path
      */
     private String validate(String path) {
         if (!getState().isAvailable()) {
-            throw new IllegalStateException(
-                    sm.getString("standardRoot.checkStateNotStarted"));
+            throw new IllegalStateException(sm.getString("standardRoot.checkStateNotStarted"));
         }
 
-        if (path == null || path.length() == 0 || !path.startsWith("/")) {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.invalidPath", path));
+        if (path == null || !path.startsWith("/")) {
+            throw new IllegalArgumentException(sm.getString("standardRoot.invalidPath", path));
         }
 
         String result;
@@ -262,22 +255,20 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
             // convert it to '/'
             result = RequestUtil.normalize(path, false);
         }
-        if (result == null || result.length() == 0 || !result.startsWith("/")) {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.invalidPathNormal", path, result));
+        if (result == null || !result.startsWith("/")) {
+            throw new IllegalArgumentException(sm.getString("standardRoot.invalidPathNormal", path, result));
         }
 
         return result;
     }
 
-    protected final WebResource getResourceInternal(String path,
-            boolean useClassLoaderResources) {
-        WebResource result = null;
+    protected final WebResource getResourceInternal(String path, boolean useClassLoaderResources) {
+        WebResource result;
         WebResource virtual = null;
         WebResource mainEmpty = null;
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
-                if (!useClassLoaderResources &&  !webResourceSet.getClassLoaderOnly() ||
+                if (!useClassLoaderResources && !webResourceSet.getClassLoaderOnly() ||
                         useClassLoaderResources && !webResourceSet.getStaticOnly()) {
                     result = webResourceSet.getResource(path);
                     if (result.exists()) {
@@ -308,8 +299,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return getResources(path, false);
     }
 
-    private WebResource[] getResources(String path,
-            boolean useClassLoaderResources) {
+    private WebResource[] getResources(String path, boolean useClassLoaderResources) {
         path = validate(path);
 
         if (isCachingAllowed()) {
@@ -319,8 +309,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         }
     }
 
-    protected WebResource[] getResourcesInternal(String path,
-            boolean useClassLoaderResources) {
+    protected WebResource[] getResourcesInternal(String path, boolean useClassLoaderResources) {
         List<WebResource> result = new ArrayList<>();
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
@@ -333,11 +322,11 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
             }
         }
 
-        if (result.size() == 0) {
+        if (result.isEmpty()) {
             result.add(main.getResource(path));
         }
 
-        return result.toArray(new WebResource[result.size()]);
+        return result.toArray(new WebResource[0]);
     }
 
     @Override
@@ -363,39 +352,28 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
     // TODO: Should the createWebResourceSet() methods be removed to some
-    //       utility class for file system based resource sets?
+    // utility class for file system based resource sets?
 
     @Override
-    public void createWebResourceSet(ResourceSetType type, String webAppMount,
-            URL url, String internalPath) {
+    public void createWebResourceSet(ResourceSetType type, String webAppMount, URL url, String internalPath) {
         BaseLocation baseLocation = new BaseLocation(url);
-        createWebResourceSet(type, webAppMount, baseLocation.getBasePath(),
-                baseLocation.getArchivePath(), internalPath);
+        createWebResourceSet(type, webAppMount, baseLocation.getBasePath(), baseLocation.getArchivePath(),
+                internalPath);
     }
 
     @Override
-    public void createWebResourceSet(ResourceSetType type, String webAppMount,
-            String base, String archivePath, String internalPath) {
+    public void createWebResourceSet(ResourceSetType type, String webAppMount, String base, String archivePath,
+            String internalPath) {
         List<WebResourceSet> resourceList;
         WebResourceSet resourceSet;
 
-        switch (type) {
-            case PRE:
-                resourceList = preResources;
-                break;
-            case CLASSES_JAR:
-                resourceList = classResources;
-                break;
-            case RESOURCE_JAR:
-                resourceList = jarResources;
-                break;
-            case POST:
-                resourceList = postResources;
-                break;
-            default:
-                throw new IllegalArgumentException(
-                        sm.getString("standardRoot.createUnknownType", type));
-        }
+        resourceList = switch (type) {
+            case PRE -> preResources;
+            case CLASSES_JAR -> classResources;
+            case RESOURCE_JAR -> jarResources;
+            case POST -> postResources;
+            default -> throw new IllegalArgumentException(sm.getString("standardRoot.createUnknownType", type));
+        };
 
         // This implementation assumes that the base for all resources will be a
         // file.
@@ -404,21 +382,16 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         if (file.isFile()) {
             if (archivePath != null) {
                 // Must be a JAR nested inside a WAR if archivePath is non-null
-                resourceSet = new JarWarResourceSet(this, webAppMount, base,
-                        archivePath, internalPath);
+                resourceSet = new JarWarResourceSet(this, webAppMount, base, archivePath, internalPath);
             } else if (file.getName().toLowerCase(Locale.ENGLISH).endsWith(".jar")) {
-                resourceSet = new JarResourceSet(this, webAppMount, base,
-                        internalPath);
+                resourceSet = new JarResourceSet(this, webAppMount, base, internalPath);
             } else {
-                resourceSet = new FileResourceSet(this, webAppMount, base,
-                        internalPath);
+                resourceSet = new FileResourceSet(this, webAppMount, base, internalPath);
             }
         } else if (file.isDirectory()) {
-            resourceSet =
-                    new DirResourceSet(this, webAppMount, base, internalPath);
+            resourceSet = new DirResourceSet(this, webAppMount, base, internalPath);
         } else {
-            throw new IllegalArgumentException(
-                    sm.getString("standardRoot.createInvalidFile", file));
+            throw new IllegalArgumentException(sm.getString("standardRoot.createInvalidFile", file));
         }
 
         if (type.equals(ResourceSetType.CLASSES_JAR)) {
@@ -438,7 +411,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
     @Override
     public WebResourceSet[] getPreResources() {
-        return preResources.toArray(new WebResourceSet[preResources.size()]);
+        return preResources.toArray(new WebResourceSet[0]);
     }
 
     @Override
@@ -449,7 +422,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
     @Override
     public WebResourceSet[] getJarResources() {
-        return jarResources.toArray(new WebResourceSet[jarResources.size()]);
+        return jarResources.toArray(new WebResourceSet[0]);
     }
 
     @Override
@@ -460,11 +433,11 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
     @Override
     public WebResourceSet[] getPostResources() {
-        return postResources.toArray(new WebResourceSet[postResources.size()]);
+        return postResources.toArray(new WebResourceSet[0]);
     }
 
     protected WebResourceSet[] getClassResources() {
-        return classResources.toArray(new WebResourceSet[classResources.size()]);
+        return classResources.toArray(new WebResourceSet[0]);
     }
 
     protected void addClassResources(WebResourceSet webResourceSet) {
@@ -497,6 +470,17 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     @Override
     public boolean isCachingAllowed() {
         return cachingAllowed;
+    }
+
+
+    @Override
+    public CacheStrategy getCacheStrategy() {
+        return cache.getCacheStrategy();
+    }
+
+    @Override
+    public void setCacheStrategy(CacheStrategy strategy) {
+        cache.setCacheStrategy(strategy);
     }
 
     @Override
@@ -547,6 +531,21 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         return trackLockedFiles;
     }
 
+    @Override
+    public void setArchiveIndexStrategy(String archiveIndexStrategy) {
+        this.archiveIndexStrategy = ArchiveIndexStrategy.valueOf(archiveIndexStrategy.toUpperCase(Locale.ENGLISH));
+    }
+
+    @Override
+    public String getArchiveIndexStrategy() {
+        return this.archiveIndexStrategy.name();
+    }
+
+    @Override
+    public ArchiveIndexStrategy getArchiveIndexStrategyEnum() {
+        return this.archiveIndexStrategy;
+    }
+
     public List<String> getTrackedResources() {
         List<String> result = new ArrayList<>(trackedResources.size());
         for (TrackedWebResource resource : trackedResources) {
@@ -566,32 +565,27 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
     /**
-     * Class loader resources are handled by treating JARs in WEB-INF/lib as
-     * resource JARs (without the internal META-INF/resources/ prefix) mounted
-     * at WEB-INF/classes (rather than the web app root). This enables reuse
-     * of the resource handling plumbing.
+     * Class loader resources are handled by treating JARs in WEB-INF/lib as resource JARs (without the internal
+     * META-INF/resources/ prefix) mounted at WEB-INF/classes (rather than the web app root). This enables reuse of the
+     * resource handling plumbing. These resources are marked as class loader only so they are only used in the methods
+     * that are explicitly defined to return class loader resources. This prevents calls to
+     * getResource("/WEB-INF/classes") returning from one or more of the JAR files.
      *
-     * These resources are marked as class loader only so they are only used in
-     * the methods that are explicitly defined to return class loader resources.
-     * This prevents calls to getResource("/WEB-INF/classes") returning from one
-     * or more of the JAR files.
-     *
-     * @throws LifecycleException If an error occurs that should stop the web
-     *                            application from starting
+     * @throws LifecycleException If an error occurs that should stop the web application from starting
      */
     protected void processWebInfLib() throws LifecycleException {
         WebResource[] possibleJars = listResources("/WEB-INF/lib", false);
 
         for (WebResource possibleJar : possibleJars) {
             if (possibleJar.isFile() && possibleJar.getName().endsWith(".jar")) {
-                createWebResourceSet(ResourceSetType.CLASSES_JAR,
-                        "/WEB-INF/classes", possibleJar.getURL(), "/");
+                createWebResourceSet(ResourceSetType.CLASSES_JAR, "/WEB-INF/classes", possibleJar.getURL(), "/");
             }
         }
     }
 
     /**
      * For unit testing.
+     *
      * @param main The main resources
      */
     protected final void setMainResources(WebResourceSet main) {
@@ -606,7 +600,6 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         cache.backgroundProcess();
         gc();
     }
-
 
 
     @Override
@@ -647,16 +640,24 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     }
 
 
-
     /*
-     * Returns true if and only if all the resources for this web application
-     * are provided via a packed WAR file. It is used to optimise cache
-     * validation in this case on the basis that the WAR file will not change.
+     * Returns true if and only if all the resources for this web application are provided via a packed WAR file. It is
+     * used to optimise cache validation in this case on the basis that the WAR file will not change.
      */
     protected boolean isPackedWarFile() {
         return main instanceof WarResourceSet && preResources.isEmpty() && postResources.isEmpty();
     }
 
+
+    @Override
+    public boolean isReadOnly() {
+        return (readOnly || main == null || main.isReadOnly());
+    }
+
+    @Override
+    public void setReadOnly(boolean readOnly) {
+        this.readOnly = readOnly;
+    }
 
     // ----------------------------------------------------------- JMX Lifecycle
     @Override
@@ -666,10 +667,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
 
     @Override
     protected String getObjectNameKeyProperties() {
-        StringBuilder keyProperties = new StringBuilder("type=WebResourceRoot");
-        keyProperties.append(context.getMBeanKeyProperties());
-
-        return keyProperties.toString();
+        return "type=WebResourceRoot" + context.getMBeanKeyProperties();
     }
 
     // --------------------------------------------------------------- Lifecycle
@@ -678,14 +676,13 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
     protected void initInternal() throws LifecycleException {
         super.initInternal();
 
+        if (context == null) {
+            throw new IllegalStateException(sm.getString("standardRoot.noContext"));
+        }
+
         cacheJmxName = register(cache, getObjectNameKeyProperties() + ",name=Cache");
 
         registerURLStreamHandlerFactory();
-
-        if (context == null) {
-            throw new IllegalStateException(
-                    sm.getString("standardRoot.noContext"));
-        }
 
         for (List<WebResourceSet> list : allResources) {
             for (WebResourceSet webResourceSet : list) {
@@ -741,16 +738,15 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         } else {
             File f = new File(docBase);
             if (!f.isAbsolute()) {
-                f = new File(((Host)context.getParent()).getAppBaseFile(), f.getPath());
+                f = new File(((Host) context.getParent()).getAppBaseFile(), f.getPath());
             }
             if (f.isDirectory()) {
                 mainResourceSet = new DirResourceSet(this, "/", f.getAbsolutePath(), "/");
-            } else if(f.isFile() && docBase.endsWith(".war")) {
+                mainResourceSet.setReadOnly(readOnly);
+            } else if (f.isFile() && docBase.endsWith(".war")) {
                 mainResourceSet = new WarResourceSet(this, "/", f.getAbsolutePath());
             } else {
-                throw new IllegalArgumentException(
-                        sm.getString("standardRoot.startInvalidMain",
-                                f.getAbsolutePath()));
+                throw new IllegalArgumentException(sm.getString("standardRoot.startInvalidMain", f.getAbsolutePath()));
             }
         }
 
@@ -781,13 +777,11 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         classResources.clear();
 
         for (TrackedWebResource trackedResource : trackedResources) {
-            log.error(sm.getString("standardRoot.lockedFile",
-                    context.getName(),
-                    trackedResource.getName()),
+            log.error(sm.getString("standardRoot.lockedFile", context.getName(), trackedResource.getName()),
                     trackedResource.getCreatedBy());
             try {
                 trackedResource.close();
-            } catch (IOException e) {
+            } catch (IOException ignore) {
                 // Ignore
             }
         }
@@ -817,11 +811,11 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
         private final String archivePath;
 
         BaseLocation(URL url) {
-            File f = null;
+            File f;
 
             if ("jar".equals(url.getProtocol()) || "war".equals(url.getProtocol())) {
                 String jarUrl = url.toString();
-                int endOfFileUrl = -1;
+                int endOfFileUrl;
                 if ("jar".equals(url.getProtocol())) {
                     endOfFileUrl = jarUrl.indexOf("!/");
                 } else {
@@ -829,17 +823,17 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 }
                 String fileUrl = jarUrl.substring(4, endOfFileUrl);
                 try {
-                    f = new File(new URL(fileUrl).toURI());
-                } catch (MalformedURLException | URISyntaxException e) {
+                    f = new File(new URI(fileUrl));
+                } catch (URISyntaxException e) {
                     throw new IllegalArgumentException(e);
                 }
                 int startOfArchivePath = endOfFileUrl + 2;
-                if (jarUrl.length() >  startOfArchivePath) {
+                if (jarUrl.length() > startOfArchivePath) {
                     archivePath = jarUrl.substring(startOfArchivePath);
                 } else {
                     archivePath = null;
                 }
-            } else if ("file".equals(url.getProtocol())){
+            } else if ("file".equals(url.getProtocol())) {
                 try {
                     f = new File(url.toURI());
                 } catch (URISyntaxException e) {
@@ -847,8 +841,7 @@ public class StandardRoot extends LifecycleMBeanBase implements WebResourceRoot 
                 }
                 archivePath = null;
             } else {
-                throw new IllegalArgumentException(sm.getString(
-                        "standardRoot.unsupportedProtocol", url.getProtocol()));
+                throw new IllegalArgumentException(sm.getString("standardRoot.unsupportedProtocol", url.getProtocol()));
             }
 
             basePath = f.getAbsolutePath();
